Feat : Some UI changes
