# gapi/rpc_create_account.go
@@ -1,0 +1,59 @@
+package gapi
+
+import (
+	"context"
+
+	db "github.com/OmSingh2003/vaultguard-api/db/sqlc"
+	"github.com/OmSingh2003/vaultguard-api/pb"
+	"github.com/OmSingh2003/vaultguard-api/val"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/types/known/timestamppb"
+)
+
+func (server *Server) CreateAccount(ctx context.Context, req *pb.CreateAccountRequest) (*pb.CreateAccountResponse, error) {
+	authPayload, err := server.getAuthPayload(ctx)
+	if err != nil {
+		return nil, err
+	}
+
+	violations := validateCreateAccountRequest(req)
+	if violations != nil {
+		return nil, InvalidArgumentError(violations)
+	}
+
+	arg := db.CreateAccountParams{
+		Owner:    authPayload.Username,
+		Currency: req.GetCurrency(),
+		Balance:  0,
+	}
+
+	account, err := server.store.CreateAccount(ctx, arg)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "failed to create account: %s", err)
+	}
+
+	rsp := &pb.CreateAccountResponse{
+		Account: convertAccount(account),
+	}
+	return rsp, nil
+}
+
+func validateCreateAccountRequest(req *pb.CreateAccountRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := val.ValidateCurrency(req.GetCurrency()); err != nil {
+		violations = append(violations, fieldViolation("currency", err))
+	}
+
+	return violations
+}
+
+func convertAccount(account db.Account) *pb.Account {
+	return &pb.Account{
+		Id:        account.ID,
+		Owner:     account.Owner,
+		Balance:   account.Balance,
+		Currency:  account.Currency,
+		CreatedAt: timestamppb.New(account.CreatedAt),
+	}
+}
